# fast_api_todo_with_test

./: pyproject.toml
api/: .env  deps.py  main.py  settings.py
api/core/: security.py
api/db/: db_connection.py  mock_db.py  modals.py
api/router/: login.py  main.py  todo.py  user.py
tests/: test_1_user.py  test_2_todo.py  test_todo.py
tests/utils/: todo.py  user.py  utils.py
