[tool.poetry]
name = "todo-fastapi"
version = "0.1.0"
description = "Fastapi todo app using sqlmodal and testing"
authors = ["saix511 <saadirfan41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"
psycopg = {extras = ["binary"], version = "^3.1.18"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
